--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
   </head>
   <body>
     <div class="content">
-      <div class="panel"></div>
-      <div class="panel"></div>
-      <div class="panel"></div>
+      <div class="panel">river.gif</div>
+      <div class="panel">tess.gif</div>
+      <div class="panel">remy.gif</div>
       <br />
-      <div class="panel"></div>
-      <div class="panel"></div>
-      <div class="panel"></div>
+      <div class="panel">otto.gif</div>
+      <div class="panel">katiej.gif</div>
+      <div class="panel">levi.gif</div>
       <br />
-      <div class="panel"></div>
-      <div class="panel"></div>
-      <div class="panel"></div>
+      <div class="panel">otto.gif</div>
+      <div class="panel">katiej.gif</div>
+      <div class="panel">levi.gif</div>
     </div>
     <br />
     <br />
